--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,9 +2,14 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "module": "CommonJS",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "jsx": "react",
+    "target": "ESNext"
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.js", "src/**/*.jsx", "src/**/*.js"],
+  "exclude": ["node_modules"]
 }
